# GrooveJam

./: CMakeLists.txt  README.md
include/: player.h
src/: main.c  player.c
